namespace java testing.brave

service TestService {
    string hello(1:string name)
}
